# YoChameleon

./: .gitignore  LICENSE.md  README.md  REPRODUCE.md  change_image_path.py  dataset.py  download_dataset.py  pyproject.toml  train.py  visualize_data.ipynb  yochameleon.py
config/: basic.yml  config.py  consts.py  selfprompting.yaml  selfprompting_reproduce.yaml
scripts/create_data/: create_soft_positive.sh  recognition.sh  retrieve.sh
utils/: helpers.py  logging.py
